replace .jpg with .png image

--- a/dht.conf
+++ b/dht.conf
@@ -18,7 +18,7 @@ dynamic.101.postprocess=
 dynamic.101.rrd=GAUGE
 
 web.status.1.content.100.name=DHT
-web.status.1.content.100.icon=DHT.png
+web.status.1.content.100.icon=dht.png
 web.status.1.content.100.line.1="Temperature: <b>" + data.temp + "&deg;C</b>"
 web.status.1.content.100.line.2="Humidity: <b>" + data.hum + "%</b>"
 
